test/should_pass/minus.erl
-module(minus).

-spec m(-1) -> {}.
m(-1) ->
    {}.
